--- a/Lesson 3/lesson3_student.rmd
+++ b/Lesson 3/lesson3_student.rmd
@@ -39,7 +39,7 @@ ggplot(aes(x = dob_day), data = pf) +
 
 #### What are some things that you notice about this histogram?
 Response:
-Ò»ÔÂÒ»ÈÕµÄÈËÊý³¬¼¶¶à£¬Õâ·ÇÍ¬Ñ°³£¡£ÁíÍâ×Ü±íµÄ31ÈÕ±È½ÏÉÙÊÇÒòÎªÓÐÐ©ÔÂ·ÝÃ»ÓÐ31ÈÕ¡£
+ä¸€æœˆä¸€æ—¥çš„äººæ•°è¶…çº§å¤šï¼Œè¿™éžåŒå¯»å¸¸ã€‚å¦å¤–æ€»è¡¨çš„31æ—¥æ¯”è¾ƒå°‘æ˜¯å› ä¸ºæœ‰äº›æœˆä»½æ²¡æœ‰31æ—¥ã€‚
 ***
 
 ### Moira's Investigation
@@ -74,7 +74,7 @@ Notes:
 
 ```
 
-#### Letâ€™s take another look at our plot. What stands out to you here?
+#### Letéˆ¥æªš take another look at our plot. What stands out to you here?
 Response:
 
 ***
@@ -86,7 +86,7 @@ Notes:
 
 ### Moira's Outlier
 Notes:
-#### Which case do you think applies to Moiraâ€™s outlier?
+#### Which case do you think applies to Moiraéˆ¥æªš outlier?
 Response:
 
 ***
@@ -261,7 +261,8 @@ qplot(x = www_likes,
 Notes:
 
 ```{r Likes on the Web}
-
+by(pf$www_likes, pf$gender, summary)
+by(pf$www_likes, pf$gender, sum)
 ```
 
 
@@ -271,7 +272,17 @@ Notes:
 Notes:
 
 ```{r Box Plots}
+qplot(x = gender, y = friend_count, 
+      data = subset(pf, !is.na(gender)),
+      geom = 'boxplot'
+      )+
+  scale_y_continuous(limits = c(0,1000))
 
+qplot(x = gender, y = friend_count, 
+      data = subset(pf, !is.na(gender)),
+      geom = 'boxplot'
+      )+
+  coord_cartesian(ylim = c(0,1000))
 ```
 
 #### Adjust the code to focus on users who have friend counts between 0 and 1000.
@@ -286,7 +297,11 @@ Notes:
 Notes:
 
 ```{r Box Plots, Quartiles, and Friendships}
-
+names(pf)
+qplot(x = gender, y = friendships_initiated, 
+      data = subset(pf, !is.na(gender)),
+      geom = 'boxplot')+
+  coord_cartesian(ylim = c(0,150))
 ```
 
 #### On average, who initiated more friendships in our sample: men or women?
@@ -305,7 +320,15 @@ Response:
 Notes:
 
 ```{r Getting Logical}
+summary(pf$mobile_likes)
+summary(pf$mobile_likes > 0)
+mobile_check_in <- NA
+pf$mobile_check_in <-ifelse(pf$mobile_likes>0, 1, 0)
+?factor
+pf$mobile_check_in <- factor(pf$mobile_check_in)
+summary(pf$mobile_check_in)
 
+sum(pf$mobile_check_in == 1)/length(pf$mobile_check_in)
 ```
 
 Response:
